2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_devices): only count wireless devices that are actually
			usable

2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wep-key.c
		- (ws_wep_key_new): Shared Key auth is not valid in Ad-Hoc mode, so
			disable it as a choice

2008-05-28  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
	  src/applet-dialogs.c
		- Make the new info dialog /stetic/

2008-05-28  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
	  src/wireless-dialog.h
	  src/applet.glade
		- Convert the wireless dialog into a subclass of GtkDialog
		- Add a "Connection" combo box and populate it with existing connections
			that apply to the operation being performed; it's populated with
			adhoc-create=True connections for "Create new...", populated with
			adhoc-create=False connections for "Connect to other...", and hidden
			when the applet is just asking for secrets.

	* src/applet-device-wireless.c
		- Handle new wireless dialog API

2008-05-28  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
		- (utils_get_device_description): ignore words in the product string
			too; add more ignored words

2008-05-28  Tambet Ingo  <tambet@gmail.com>

	Show all active connections in "Connection Information" dialog.

	* src/applet.glade: Remove the connection editor's content, it's
	built in C now, one page per active connection.

	* src/applet-dialogs.c: Add a tab per connection when showing the
	connection information.

	* src/applet.c (applet_connection_info_cb): Don't find the default
	connection, all active connections are shown.

2008-05-23  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/page-ip4.c: Add a "DHCP with manual DNS settings"
	IP4 configuration method.

2008-05-21  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
		- (ws_802_1x_auth_combo_init): fix counting of active item in the
			auth popup menu (rh #447716)
